tests/regression/errors/undefined_variables.csd
// Undefined variable references
vibez.spill("Using undefined:", undefined_var)

slay function_with_undefined() {
    sus result drip = unknown_variable + 5
    damn result
}

sus x drip = function_with_undefined()

// Using undefined in expressions
sus calculation drip = missing_var * 2 + 3

// Array access with undefined
sus element drip = undefined_array[0]
